--- a/app/src/main/res/layout/activity_day.xml
+++ b/app/src/main/res/layout/activity_day.xml
@@ -4,17 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/holo_blue_light"
     tools:context=".DayActivity">
 
     <EditText
-        android:id="@+id/addData"
+        android:id="@+id/mAddData"
         android:layout_width="361dp"
         android:layout_height="64dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
-        android:autoText="false"
         android:ems="10"
         android:hint="@string/add_data"
         android:inputType="number"
@@ -27,57 +27,60 @@
         app:layout_constraintVertical_bias="0.033" />
 
     <Button
-        android:id="@+id/confirmButton"
+        android:id="@+id/mConfirmButton"
         android:layout_width="124dp"
         android:layout_height="60dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:background="@android:color/holo_blue_dark"
         android:text="@string/confirm"
         android:textSize="12sp"
-        app:layout_constraintBottom_toTopOf="@+id/todayData"
+        app:layout_constraintBottom_toTopOf="@+id/mTodayData"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.909"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addData"
+        app:layout_constraintTop_toBottomOf="@+id/mAddData"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/todayData"
+        android:id="@+id/mTodayData"
         android:layout_width="324dp"
         android:layout_height="315dp"
         android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addData"
+        app:layout_constraintTop_toBottomOf="@+id/mAddData"
         app:layout_constraintVertical_bias="0.431" />
 
     <Button
-        android:id="@+id/statisticsButton"
+        android:id="@+id/mStatisticsButton"
         android:layout_width="141dp"
-        android:layout_height="wrap_content"
+        android:layout_height="44dp"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:background="@android:color/holo_blue_dark"
         android:text="@string/statistics"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.964"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/todayData"
+        app:layout_constraintTop_toBottomOf="@+id/mTodayData"
         app:layout_constraintVertical_bias="0.0" />
 
     <ImageButton
-        android:id="@+id/settingsButton"
+        android:id="@+id/mSettingsButton"
         android:layout_width="44dp"
         android:layout_height="43dp"
         android:layout_marginEnd="4dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:background="@android:color/holo_blue_dark"
         android:contentDescription="@string/icon"
-        app:layout_constraintBottom_toTopOf="@+id/addData"
+        app:layout_constraintBottom_toTopOf="@+id/mAddData"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
