--- a/app/src/main/res/layout/activity_day.xml
+++ b/app/src/main/res/layout/activity_day.xml
@@ -11,10 +11,10 @@
         android:id="@+id/mAddData"
         android:layout_width="361dp"
         android:layout_height="64dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:ems="10"
         android:hint="@string/add_data"
         android:inputType="number"
@@ -30,9 +30,9 @@
         android:id="@+id/mConfirmButton"
         android:layout_width="124dp"
         android:layout_height="60dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@android:color/holo_blue_dark"
         android:text="@string/confirm"
         android:textSize="12sp"
@@ -54,14 +54,15 @@
         app:layout_constraintTop_toBottomOf="@+id/mAddData"
         app:layout_constraintVertical_bias="0.431" />
 
+
     <Button
         android:id="@+id/mStatisticsButton"
         android:layout_width="141dp"
         android:layout_height="44dp"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
         android:background="@android:color/holo_blue_dark"
         android:text="@string/statistics"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -71,13 +72,27 @@
         app:layout_constraintTop_toBottomOf="@+id/mTodayData"
         app:layout_constraintVertical_bias="0.0" />
 
+    <Button
+        android:id="@+id/mBodyVisualButton"
+        android:layout_width="141dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginEnd="252dp"
+        android:background="@android:color/holo_blue_dark"
+        android:text="Прогресс"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mTodayData"
+        app:layout_constraintVertical_bias="0.125" />
+
     <ImageButton
         android:id="@+id/mSettingsButton"
         android:layout_width="44dp"
         android:layout_height="43dp"
-        android:layout_marginEnd="4dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="4dp"
         android:background="@android:color/holo_blue_dark"
         android:contentDescription="@string/icon"
         app:layout_constraintBottom_toTopOf="@+id/mAddData"
