--- a/app/src/main/res/layout/activity_femalebodyvisual.xml
+++ b/app/src/main/res/layout/activity_femalebodyvisual.xml
@@ -4,34 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_green_dark">
-
-    <TextView
-        android:id="@+id/femaleText"
-        android:layout_width="410dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="547dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="149dp"
-        android:gravity="center_horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    android:background="@android:color/holo_blue_bright">
 
     <ImageView
         android:id="@+id/femaleBody"
         android:layout_width="365dp"
-        android:layout_height="500dp"
+        android:layout_height="562dp"
+        android:layout_marginBottom="184dp"
+        android:layout_marginEnd="23dp"
         android:layout_marginStart="23dp"
         android:layout_marginTop="47dp"
-        android:layout_marginEnd="23dp"
-        android:layout_marginBottom="184dp"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.481"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.199" />
 
 
 </android.support.constraint.ConstraintLayout>
