--- a/app/src/main/res/layout/activity_statistics.xml
+++ b/app/src/main/res/layout/activity_statistics.xml
@@ -6,6 +6,7 @@
     android:background="@android:color/holo_blue_light">
 
     <android.support.v7.widget.RecyclerView
+        android:id = "@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="4dp"
