--- a/app/src/main/res/layout/activity_types.xml
+++ b/app/src/main/res/layout/activity_types.xml
@@ -1,18 +1,19 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="100dp"
-    android:layout_height="100dp">
+    android:layout_width="95dp"
+    android:layout_height="95dp">
 
     <TextView
         android:id="@+id/waterType"
         android:layout_width="match_parent"
         android:layout_height="25dp"
-        android:textStyle="bold"
-        android:gravity="center" />
+        android:gravity="center"
+        android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/waterType"/>
+        android:layout_below="@id/waterType"
+        android:scaleType="fitCenter" />
 
 </RelativeLayout>
