--- a/app/src/main/res/layout/activity_day.xml
+++ b/app/src/main/res/layout/activity_day.xml
@@ -72,6 +72,23 @@
         app:layout_constraintVertical_bias="0.017" />
 
     <Button
+        android:id="@+id/mGraphButton"
+        android:layout_width="141dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
+        android:background="@android:color/holo_blue_dark"
+        android:text="К графику"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.925"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mStatisticsButton"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <Button
         android:id="@+id/mBodyVisualButton"
         android:layout_width="141dp"
         android:layout_height="44dp"
