--- a/app/src/main/res/layout/activity_malebodyvisual.xml
+++ b/app/src/main/res/layout/activity_malebodyvisual.xml
@@ -4,16 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_blue_bright">
+    android:background="@color/colorPrimary">
 
     <ImageView
         android:id="@+id/maleBody"
         android:layout_width="365dp"
         android:layout_height="562dp"
-        android:layout_marginBottom="184dp"
-        android:layout_marginEnd="23dp"
         android:layout_marginStart="23dp"
         android:layout_marginTop="47dp"
+        android:layout_marginEnd="23dp"
+        android:layout_marginBottom="184dp"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
