--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -3,37 +3,42 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_blue_light">
+    android:background="@android:color/background_light">
 
     <EditText
         android:id="@+id/mAddWeight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="84dp"
         android:layout_marginTop="124dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:ems="10"
         android:hint="@string/weight"
         android:inputType="number"
         android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
+        android:textColorHint="@color/colorPrimaryDark"
+        android:textColorLink="@color/colorAccent"
         app:layout_constraintBottom_toTopOf="@+id/mGenderHint"
         app:layout_constraintEnd_toEndOf="@+id/mGenderHint"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.625" />
+        app:layout_constraintVertical_bias="0.627" />
 
     <TextView
         android:id="@+id/mEnterHint"
         android:layout_width="220dp"
         android:layout_height="58dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="72dp"
         android:layout_marginTop="36dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/settings"
         android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
+        android:textColorHint="@android:color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/mAddWeight"
         app:layout_constraintEnd_toEndOf="@+id/mAddWeight"
@@ -46,11 +51,12 @@
         android:id="@+id/mFemaleCheck"
         android:layout_width="127dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="44dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/female"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/mConfirmParams"
         app:layout_constraintEnd_toStartOf="@+id/mMaleCheck"
@@ -63,11 +69,12 @@
         android:id="@+id/mMaleCheck"
         android:layout_width="127dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="44dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/male"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/mConfirmParams"
         app:layout_constraintEnd_toEndOf="parent"
@@ -80,10 +87,12 @@
         android:id="@+id/mGenderHint"
         android:layout_width="169dp"
         android:layout_height="39dp"
-        android:layout_marginBottom="276dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="276dp"
         android:text="@string/gender"
         android:textAlignment="center"
+        android:textColor="@color/colorPrimaryDark"
+        android:textColorHint="@android:color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/mConfirmParams"
@@ -96,10 +105,11 @@
         android:id="@+id/mConfirmParams"
         android:layout_width="163dp"
         android:layout_height="58dp"
-        android:layout_marginBottom="72dp"
         android:layout_marginTop="8dp"
-        android:background="@android:color/holo_blue_dark"
+        android:layout_marginBottom="72dp"
+        android:background="@color/colorPrimary"
         android:text="@string/confirm"
+        android:textColor="@android:color/background_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
