--- a/app/src/main/res/layout/activity_types.xml
+++ b/app/src/main/res/layout/activity_types.xml
@@ -7,6 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="25dp"
         android:gravity="center"
+        android:textColor="@color/colorPrimaryDark"
         android:textStyle="bold" />
 
     <ImageView
