--- a/app/src/main/res/layout/statictics_item.xml
+++ b/app/src/main/res/layout/statictics_item.xml
@@ -14,6 +14,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="16sp"
         android:textStyle="bold" />
 
